Source/JavaScriptCore/runtime/CodeCache.cpp
@@ -36,9 +36,18 @@
 
 namespace JSC {
 
+const double CodeCacheMap::workingSetTime = 10.0;
+
 void CodeCacheMap::pruneSlowCase()
 {
-    while (m_size >= m_capacity) {
+    m_minCapacity = m_size - m_sizeAtLastPrune;
+    m_sizeAtLastPrune = m_size;
+    m_timeAtLastPrune = monotonicallyIncreasingTime();
+
+    if (m_capacity < m_minCapacity)
+        m_capacity = m_minCapacity;
+
+    while (m_size > m_capacity) {
         MapType::iterator it = m_map.begin();
         m_size -= it->key.length();
         m_map.remove(it);
